# shipmybox-cli

./: .gitignore  README.md  pyproject.toml
agents/: shipmybox.yaml
agents/shipmybox/: SKILL.md
src/shipmybox/: cli.py  client.py  exceptions.py  notifications.py  state.py
tests/: test_notifications.py  test_parser.py
