[project]
name = "shipmybox"
version = "0.1.0"
description = "CLI tool to extract data from ShipMyBox company panel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.scripts]
shipmybox = "shipmybox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
